fix product error
